# colision_simulation

./: .gitignore  CMakeLists.txt  README.md
include/: ball.hpp
src/: ball.cpp  main.cpp
